# lockso

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile.be  Dockerfile.be.dev  Dockerfile.fe  Dockerfile.fe.dev  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  justfile
backend/: Cargo.toml  clippy.toml
backend/crates/lockso-api/: Cargo.toml
backend/crates/lockso-api/src/: health.rs  main.rs  state.rs
backend/crates/lockso-api/src/extractors/: auth.rs
backend/crates/lockso-api/src/helpers/: csrf.rs
backend/crates/lockso-api/src/middleware/: rate_limit.rs
backend/crates/lockso-api/src/routes/: activity.rs  api_keys.rs  attachments.rs  auth.rs  csrf.rs  email.rs  folders.rs  groups.rs  health_report.rs  import_export.rs  items.rs  mod.rs  sends.rs  sessions.rs  settings.rs  sharing.rs  totp.rs  trash.rs  users.rs  vaults.rs  webauthn.rs  webhooks.rs
backend/crates/lockso-core/: Cargo.toml
backend/crates/lockso-core/src/: encryption.rs  lib.rs
backend/crates/lockso-core/src/auth/: mod.rs  password_validator.rs  permissions.rs
backend/crates/lockso-core/src/error/: mod.rs
backend/crates/lockso-core/src/models/: access_grant.rs  activity_log.rs  api_key.rs  attachment.rs  email.rs  enums.rs  favorite.rs  folder.rs  group.rs  import_export.rs  item.rs  mod.rs  resource_access.rs  send.rs  session.rs  settings.rs  snapshot.rs  user.rs  user_role.rs  vault.rs  vault_access.rs  vault_type.rs  webauthn.rs  webhook.rs
backend/crates/lockso-core/src/services/: access_service.rs  activity_log_service.rs  api_key_service.rs  attachment_service.rs  auth_service.rs  bootstrap.rs  email_service.rs  folder_service.rs  group_service.rs  health_report_service.rs  import_export_service.rs  item_service.rs  mod.rs  send_service.rs  session_service.rs  settings_service.rs  sharing_service.rs  totp_service.rs  user_management_service.rs  vault_service.rs  webauthn_service.rs  webhook_service.rs
backend/crates/lockso-crypto/: Cargo.toml
backend/crates/lockso-crypto/src/: aes_gcm.rs  argon2.rs  chacha20.rs  error.rs  lib.rs  random.rs  rsa_keys.rs  search_hash.rs  totp.rs
backend/crates/lockso-db/: Cargo.toml
backend/crates/lockso-db/src/: lib.rs  storage.rs  version.rs
docker/: nginx-frontend.conf
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: activity.ts  admin.ts  attachments.ts  client.ts  email.ts  groups.ts  import-export.ts  sessions.ts  sharing.ts  totp.ts  vaults.ts  webauthn.ts
frontend/src/components/: breadcrumbs.tsx  command-palette.tsx  language-toggle.tsx  lockso-logo.tsx  search-bar.tsx  theme-toggle.tsx
frontend/src/components/folder/: folder-dialog.tsx  folder-tree.tsx
frontend/src/components/item/: attachment-section.tsx  breach-indicator.tsx  item-detail-panel.tsx  item-form-dialog.tsx  item-list.tsx  item-type-picker.tsx  password-age-badge.tsx  password-generator.tsx  snapshot-viewer.tsx  totp-display.tsx
frontend/src/components/layout/: app-layout.tsx  auth-layout.tsx  sidebar.tsx
frontend/src/components/settings/: activity-log.tsx  api-key-settings.tsx  email-settings.tsx  general-settings.tsx  group-management.tsx  security-settings.tsx  session-management.tsx  two-factor-settings.tsx  user-management.tsx  webauthn-settings.tsx  webhook-settings.tsx
frontend/src/components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  label.tsx  spinner.tsx  textarea.tsx
frontend/src/components/vault/: create-vault-dialog.tsx  delete-vault-dialog.tsx  edit-vault-dialog.tsx  export-dialog.tsx  import-dialog.tsx  share-vault-dialog.tsx  vault-card.tsx
frontend/src/hooks/: use-health-check.ts
frontend/src/i18n/: index.ts
frontend/src/i18n/locales/: en.json  ru.json
frontend/src/lib/: api-error.ts  breach-check.ts  colors.ts  item-types.ts  password-generator.ts  send-crypto.ts  totp.ts
frontend/src/pages/: dashboard.tsx  favorites.tsx  health.tsx  loading.tsx  login.tsx  recent.tsx  register.tsx  send-view.tsx  sends.tsx  settings.tsx  trash.tsx  two-factor.tsx  vault-detail.tsx  vault-list.tsx  wizard.tsx
frontend/src/stores/: auth.ts  theme.ts
frontend/src/styles/: globals.css
frontend/src/types/: activity.ts  admin.ts  api.ts  group.ts  import-export.ts  session.ts  sharing.ts  vault.ts
migrations/schema/: 001_bootstrap.sql  002_auth_tables.sql  003_vault_tables.sql  004_vault_sharing.sql  005_attachments.sql  006_activity_logs.sql  007_password_expiration.sql  008_email_settings.sql  009_webauthn.sql  010_indexes_and_fixes.sql  011_fk_cascade_fixes.sql  012_user_groups.sql  013_trash.sql  014_sends.sql  015_webhooks.sql  016_api_keys.sql
