[package]
name = "lockso-api"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "lockso"
path = "src/main.rs"

[dependencies]
axum.workspace = true
axum-extra.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
sqlx.workspace = true
redis.workspace = true
hex.workspace = true
url.workspace = true

lockso-core.workspace = true
lockso-crypto.workspace = true
lockso-db.workspace = true
