[package]
name = "lockso-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
validator.workspace = true
tokio.workspace = true
axum.workspace = true
sqlx.workspace = true
redis.workspace = true

hex.workspace = true
base64ct.workspace = true
base64-url.workspace = true
p256.workspace = true
ecdsa.workspace = true
sha1.workspace = true
sha2.workspace = true
rand.workspace = true

lettre.workspace = true
reqwest.workspace = true

lockso-crypto = { path = "../lockso-crypto" }
lockso-db = { path = "../lockso-db" }
